--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-icons": "^4.2.0",
+    "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.2",
     "react-scroll-parallax": "^2.4.0",
+    "react-social-icons": "^5.5.1",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.2"
   },
